kubernetes/base/mcp-system/envoy-mcp/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name envoy-mcp
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname mcp.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
      group: guarded
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: *name
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${CLUSTER_MCP_GATEWAY_ADDR}
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 1975
      allowedRoutes:
        namespaces:
          from: Same
